# xml-schema

./: Cargo.toml  TODO.md
xml_schema/: Cargo.toml
xml_schema/tests/: complex_type.rs  musicxml.rs  simple_type.rs
xml_schema_derive/: Cargo.toml
xml_schema_derive/src/: expander.rs  lib.rs
xml_schema_derive/src/xsd/: annotation.rs  attribute.rs  complex_type.rs  element.rs  extension.rs  group.rs  mod.rs  rust_types_mapping.rs  schema.rs  sequence.rs  xsd_context.rs
xml_schema_parser/: Cargo.toml
xml_schema_parser/src/: codegen.rs  lib.rs
xml_schema_parser/src/xsd/: annotation.rs  attribute.rs  attribute_group.rs  choice.rs  complex_content.rs  complex_type.rs  element.rs  enumeration.rs  extension.rs  group.rs  import.rs  list.rs  max_occurences.rs  mod.rs  qualification.rs  restriction.rs  rust_types_mapping.rs  schema.rs  sequence.rs  simple_content.rs  simple_type.rs  union.rs  xsd_context.rs
xsd-codegen/: Cargo.toml
xsd-codegen/src/: codegen_helper.rs  lib.rs  rust_codegen.rs  xml_element.rs
xsd-types/: Cargo.toml
xsd-types/src/: lib.rs
