[package]
name = "xml-schema"
version = "0.0.7"
description = "Structure generator from XSD source file"
edition = "2021"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>"]
keywords = ["XML", "Schema", "XSD"]
license = "MIT"
repository = "https://github.com/media-io/xml-schema"
homepage = "https://github.com/media-io/xml-schema"
documentation = "https://docs.rs/xml_schema"
readme = "../README.md"

[dependencies]
log = "0.4"
xml-schema-parser = { path = "../xml_schema_parser" }
tracing-subscriber = "0.3"


[dev-dependencies]
log = "0.4"
xml-schema-parser = { path = "../xml_schema_parser" }
tracing-subscriber = "0.3"
