[package]
name = "xml-schema-parser"
version = "0.0.7"
description = "Structure generator from XSD source file"
edition = "2021"

[lib]
name = "xml_schema_parser"

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
xml-rs = "0.8"
xmltree = "0.10.3"
thiserror = "1.0.30"
chrono = "0.4"
tracing = "0.1.29"
xsd-codegen = { path = "../xsd-codegen" }
xsd-types = { path = "../xsd-types" }

[dev-dependencies]
tracing-subscriber = "0.3"
